# quantitative-portfolio-optimization

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rd-party.txt  README.md  pyproject.toml  setup_vm.sh
.github/workflows/: main.yml  pr.yaml  release-2512.yml
brev/: launchable-content.ipynb  launchable-setup.ipynb
data/stock_data/: sp500.csv
demo/: TECH_SUMMARY.md  app_parameters.py  cvar_streamlit_app.py  efficient_frontier_streamlit_app.py  rebalancing_streamlit_app.py
deploy/: cvar_basic.ipynb  efficient_frontier.ipynb  rebalancing_strategies.ipynb
notebooks/: cvar_basic.ipynb  efficient_frontier.ipynb  launchable.ipynb  mean_variance_basic.ipynb  readme.md  rebalancing_strategies.ipynb
src/: __init__.py  backtest.py  cvar_optimizer.py  cvar_parameters.py  cvar_utils.py  mean_variance_optimizer.py  mean_variance_parameters.py  portfolio.py  readme.md  rebalance.py  utils.py
tests/: test_core.py
