[project]
name = "cufolio"
version = "25.10"
description = "Quantitative Portfolio Optimization developer example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.2",
    "cvxpy==1.7.3",
    "scikit-learn==1.7.1",
    "cuml-cu13==25.10.0",
    "cuopt-cu13==25.10.0",
    "seaborn==0.13.2",
    "yfinance>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "isort",
    "flake8",
    "pre-commit==4.3.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools]
packages = ["cufolio"]
py-modules = []

[tool.setuptools.package-dir]
cufolio = "src"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.pkl", "*.parquet"]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
